# SSE-language-server

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs  tests.rs
vscode_client/: test.sse  test2.sse
vscode_client/sse-language-client/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
vscode_client/sse-language-client/src/: extension.ts
vscode_client/sse-language-client/syntaxes/: sse.tmLanguage.json
