[package]
name = "sse_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
sse = { git = "https://github.com/Ella-Hoeppner/SSE.git" }
# sse = { path = "../sse" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-std", "macros", "io-util"] }
tower-lsp = "0.20.0"

[[bin]]
name = "sse_lsp"
path = "src/main.rs"